minor css alignment issue

--- a/client/src/pages/donate/donate.styles.scss
+++ b/client/src/pages/donate/donate.styles.scss
@@ -16,6 +16,7 @@ color: #b3b3b3;
   span {
     display: flex;
     align-items: center;
+    justify-content: center;
     letter-spacing: 1px;
   }
 }
